improved load_tokenizer inverse vocabulary to show int

--- a/Jupyter_Notebooks/LOCAL_Infererence.ipynb
+++ b/Jupyter_Notebooks/LOCAL_Infererence.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2c1e6e1a",
+   "id": "3f211df6",
    "metadata": {},
    "outputs": [
     {
@@ -34,14 +34,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c53ef40c",
+   "id": "90e29979",
    "metadata": {},
    "outputs": [],
    "source": [
     "from Data.Data_Module import Data_Module\n",
     "from Models.Printed_Tex_Transformer import ResNetTransformer\n",
     "from Lightning_Models.Printed_Tex_Lit_Model import LitResNetTransformer\n",
-    "\n",
+    "import numpy as np\n",
     "import pytorch_lightning as pl\n",
     "from pytorch_lightning import Trainer\n",
     "from PIL import Image\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cadc3e8e",
+   "id": "02f1c6b8",
    "metadata": {},
    "source": [
     "# Loading Vocabulary\n",
@@ -79,10 +79,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "793d1eb8",
+   "execution_count": 3,
+   "id": "e5e8b661",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'iteritems'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/wc/60y8v25x3ns_jgsx6clbdb180000gn/T/ipykernel_20272/3030004016.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# image filenames need to be in Data/Data_Bank/corresponding_png_images.txt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m dataset = Data_Module(stage = 'fit',\n\u001b[0m\u001b[1;32m      7\u001b[0m                  \u001b[0mset_max_label_length\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m256\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m                  \u001b[0mnumber_png_images_to_use_in_dataset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m188021\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR/Data/Data_Module.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, stage, set_max_label_length, number_png_images_to_use_in_dataset, labels_transform, image_transform_name, load_vocabulary, vocabulary_path, train_val_fraction, batch_size, num_workers, data_on_gpu)\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mload_vocabulary\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 95\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_tokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     96\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR/Data/Data_Module.py\u001b[0m in \u001b[0;36mload_tokenizer\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mload_tokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 127\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocabulary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_dic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocabulary_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    128\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocab_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minverse_vocabulary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minvert_vocabulary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR/Data/vocabulary_utils.py\u001b[0m in \u001b[0;36mload_dic\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m    132\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m         \u001b[0mdic\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m         \u001b[0mdic_new\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miteritems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdic_new\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'iteritems'"
+     ]
+    }
+   ],
    "source": [
     "# Generate Data Module by uploading images and formulas\n",
     "# images need to be in the folder Data/Data_Bank/generated_png_images\n",
@@ -115,22 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c44cbfce",
+   "execution_count": null,
+   "id": "1434a874",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Data_Module' object has no attribute 'max_label_length'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/wc/60y8v25x3ns_jgsx6clbdb180000gn/T/ipykernel_20121/4026206247.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m print( \n\u001b[1;32m      2\u001b[0m     \u001b[0;34m'Vocabulary size:'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;34m'\\nMax label length:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_label_length\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"\\nStart <S> goes to index \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'<S>'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m       \u001b[0;34m\"\\nEnd <E> goes to index \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'<E>'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Data_Module' object has no attribute 'max_label_length'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print( \n",
     "    'Vocabulary size:',len(dataset.vocabulary),\n",
@@ -144,7 +147,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94f6610c",
+   "id": "2f9b25ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initiate the model\n",
+    "model = ResNetTransformer(dataset=dataset).to(dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79be1585",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the weights\n",
+    "\n",
+    "model.load_state_dict(torch.load((\"Models_Parameters_Log/258_Test_run.pth\"), map_location=torch.device('cpu')))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7faac9e",
+   "metadata": {},
+   "source": [
+    "### Inference Tests on various images\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58e6e5c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper Function to convert prediction labels to strings\n",
+    "def token_to_strings(tokens):\n",
+    "    mapping = dataset.vocabulary\n",
+    "    inverse_mapping =dataset.inverse_vocabulary\n",
+    "    s=''\n",
+    "    if tokens.shape[0] ==1:\n",
+    "        tokens = tokens[0]\n",
+    "    for number in tokens:\n",
+    "        \n",
+    "        letter = inverse_mapping[number.item()]\n",
+    "        s= s +\" \" + str(letter)\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0498f064",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### ALB\n",
+    "my_image_path= \"Jupyter_Notebooks/test_photos/my_image.png\"\n",
+    "my_image = Image.open(my_image_path).convert(\"L\") \n",
+    "my_image_tensor = dataset.image_transform_test(image=np.array(my_image))['image']\n",
+    "print(display(my_image))\n",
+    "print('\\nPredicted formula:')\n",
+    "with torch.no_grad():\n",
+    "    model.eval()\n",
+    "    my_prediction =  model.predict(my_image_tensor.unsqueeze(0).to(dev))\n",
+    "print(token_to_strings(my_prediction))\n",
+    "print(display(Math(token_to_strings(my_prediction))))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b0a12b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.inverse_vocabulary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1a4dcdb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -152,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "701bf2a1",
+   "id": "f9662480",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -160,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "675eb5f5",
+   "id": "a0868ea7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -168,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cd08f75",
+   "id": "a2f2cc43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -176,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bb6fd5c",
+   "id": "7e08f5a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -184,47 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e40c4435",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eeeac0ce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9f6eb40",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5d315a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3c9b736",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "738cf4b4",
+   "id": "af3c5818",
    "metadata": {},
    "outputs": [],
    "source": []
