--- a/Jupyter_Notebooks/LOCAL ResNet Transformer testing.ipynb
+++ b/Jupyter_Notebooks/LOCAL ResNet Transformer testing.ipynb
@@ -488,6 +488,18 @@
      "text": [
       "None\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "wandb: Network error (ConnectionError), entering retry loop.\n",
+      "wandb: Network error (ConnectionError), entering retry loop.\n",
+      "wandb: Network error (ConnectionError), entering retry loop.\n",
+      "wandb: Network error (ConnectionError), entering retry loop.\n",
+      "wandb: Network error (ConnectionError), entering retry loop.\n",
+      "wandb: Network error (ConnectionError), entering retry loop.\n"
+     ]
     }
    ],
    "source": [
