--- a/Jupyter_Notebooks/LOCAL_Infererence_550_vocab.ipynb
+++ b/Jupyter_Notebooks/LOCAL_Infererence_550_vocab.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "dataset = Data_Module(stage = 'fit',\n",
     "                 set_max_label_length = 256,\n",
-    "                 number_png_images_to_use_in_dataset=188021,\n",
+    "                 number_png_images_to_use_in_dataset=250*1000,\n",
     "                 labels_transform='default',\n",
     "                image_transform_name ='alb',\n",
     "                 train_val_fraction = 0.99,\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d5d33132",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9ff4b8a1",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "88f92a7b",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "bde73a6e",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "4269c910",
    "metadata": {},
    "outputs": [
