--- a/Jupyter_Notebooks/GPC_MODEL1_character_tokenizer.ipynb
+++ b/Jupyter_Notebooks/GPC_MODEL1_character_tokenizer.ipynb
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting path:/home/tigranerfaceb/image-to-tex-OCR/Jupyter_Notebooks\n",
-      "Current path:/home/tigranerfaceb/image-to-tex-OCR\n"
+      "Starting path:/home/resisistancerow_909/image-to-tex-OCR/Jupyter_Notebooks\n",
+      "Current path:/home/resisistancerow_909/image-to-tex-OCR\n"
      ]
     }
    ],
@@ -87,13 +87,13 @@
     "# image filenames need to be in Data/Data_Bank/corresponding_png_images.txt\n",
     "\n",
     "dataset = Data_Module(stage = 'fit',\n",
-    "                 set_max_label_length = 256,\n",
-    "                 number_png_images_to_use_in_dataset=188021,\n",
+    "                 set_max_label_length = 128,\n",
+    "                 number_png_images_to_use_in_dataset=250*1000,\n",
     "                 labels_transform='default',\n",
     "                image_transform_name ='alb',\n",
-    "                 train_val_fraction = 0.99,\n",
-    "                   \n",
-    "                load_vocabulary = False,\n",
+    "                 train_val_fraction = 0.999,\n",
+    "                   vocabulary_path = 'Data/Data_Bank/230k.json',\n",
+    "                load_vocabulary = True,\n",
     "\n",
     "\n",
     "                 batch_size = 128,\n",
@@ -111,14 +111,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "42f41934",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "bcd9c628",
    "metadata": {},
@@ -127,10 +119,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocabulary size: 550 \n",
-      "Train-Dataset size: 180048 \n",
-      "Validation-Dataset size: 1819 \n",
-      "Max label length: 258 \n",
+      "Vocabulary size: 579 \n",
+      "Train-Dataset size: 223069 \n",
+      "Validation-Dataset size: 224 \n",
+      "Max label length: 130 \n",
       "Start <S> goes to index  0 \n",
       "End <E> goes to index  1 \n",
       "Padding <P> goes to index  2\n"
@@ -159,9 +151,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tigranerfaceb/anaconda3/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "/home/resisistancerow_909/anaconda3/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
-      "/home/tigranerfaceb/anaconda3/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "/home/resisistancerow_909/anaconda3/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
       "  warnings.warn(msg)\n"
      ]
     }
@@ -179,13 +171,22 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 1509), started 4:00:05 ago. (Use '!kill 1509' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-c7d8eb545ddc4a58\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-5b9d24086f031812\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-c7d8eb545ddc4a58\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-5b9d24086f031812\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b1796eea",
    "metadata": {
     "scrolled": false
@@ -220,7 +221,7 @@
     {
      "data": {
       "text/html": [
-       "Finishing last run (ID:2u2l394q) before initializing another..."
+       "Finishing last run (ID:kbcjxsgd) before initializing another..."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -244,7 +245,7 @@
     {
      "data": {
       "text/html": [
-       "Synced <strong style=\"color:#cdcd00\">glorious-spaceship-23</strong>: <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/2u2l394q\" target=\"_blank\">https://wandb.ai/gmarus/image-to-tex-OCR/runs/2u2l394q</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       "Synced <strong style=\"color:#cdcd00\">ancient-snowball-149</strong>: <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/kbcjxsgd\" target=\"_blank\">https://wandb.ai/gmarus/image-to-tex-OCR/runs/kbcjxsgd</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -256,7 +257,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20221229_002956-2u2l394q/logs</code>"
+       "Find logs at: <code>./wandb/run-20230316_023853-kbcjxsgd/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -268,7 +269,7 @@
     {
      "data": {
       "text/html": [
-       "Successfully finished last run (ID:2u2l394q). Initializing new run:<br/>"
+       "Successfully finished last run (ID:kbcjxsgd). Initializing new run:<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -280,12 +281,25 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4952da89f754c52b8cf7636d3e1b551",
+       "model_id": "83884c645ce6423fb43f5532dd8fb461",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.01666930671666099, max=1.0)…"
+       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.01666919943333293, max=1.0)…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "wandb version 0.14.0 is available!  To upgrade, please run:\n",
+       " $ pip install wandb --upgrade"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -306,7 +320,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/tigranerfaceb/image-to-tex-OCR/wandb/run-20221229_003139-1hdy22n5</code>"
+       "Run data is saved locally in <code>/home/resisistancerow_909/image-to-tex-OCR/wandb/run-20230316_024217-kmmb6lcn</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -318,7 +332,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/1hdy22n5\" target=\"_blank\">driven-grass-24</a></strong> to <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/kmmb6lcn\" target=\"_blank\">lilac-glade-150</a></strong> to <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -335,7 +349,7 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "Restoring states from the checkpoint path at Models_Parameters_Log/Test_Run/version_2/checkpoints/epoch=21-step=30954.ckpt\n"
+      "Restoring states from the checkpoint path at Data/Data_Bank/epoch=11-step=20911.ckpt\n"
      ]
     },
     {
@@ -349,7 +363,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tigranerfaceb/anaconda3/lib/python3.9/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:346: UserWarning: The dirpath has changed from 'Models_Parameters_Log/Test_Run/version_2/checkpoints' to 'Models_Parameters_Log/Test_Run/version_3/checkpoints', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
+      "/home/resisistancerow_909/anaconda3/lib/python3.9/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:346: UserWarning: The dirpath has changed from 'Models_Parameters_Log/Test_Run/version_0/checkpoints' to 'Models_Parameters_Log/Test_Run/version_1/checkpoints', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
       "  warnings.warn(\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
@@ -363,8 +377,8 @@
       "3.8 M     Trainable params\n",
       "0         Non-trainable params\n",
       "3.8 M     Total params\n",
-      "15.009    Total estimated model params size (MB)\n",
-      "Restored all states from the checkpoint file at Models_Parameters_Log/Test_Run/version_2/checkpoints/epoch=21-step=30954.ckpt\n"
+      "15.038    Total estimated model params size (MB)\n",
+      "Restored all states from the checkpoint file at Data/Data_Bank/epoch=11-step=20911.ckpt\n"
      ]
     },
     {
@@ -384,138 +398,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc78f42aba2743b1b9aa1ceacc4f6400",
+       "model_id": "bfb978380f6f489d83d884741b8e504d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Training: 1407it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
+       "Training: 1743it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -623,7 +511,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tigranerfaceb/anaconda3/lib/python3.9/site-packages/pytorch_lightning/trainer/call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "/home/resisistancerow_909/anaconda3/lib/python3.9/site-packages/pytorch_lightning/trainer/call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
       "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
      ]
     }
@@ -634,11 +522,12 @@
     "\n",
     "#use the lit_model to run with Trainer\n",
     "trainer = Trainer(accelerator='gpu', devices=1,  max_epochs=60, logger=logger, auto_lr_find=True) #accumulate_grad_batches=2, overfit_batches=1, default_root_dir=\"lightning_logs/ResNet/checkpoints\"  \n",
-    "trainer.fit(model=lit_model, datamodule=dataset,ckpt_path='Models_Parameters_Log/Test_Run/version_2/checkpoints/epoch=21-step=30954.ckpt')\n",
+    "trainer.fit(model=lit_model, datamodule=dataset, ckpt_path='Data/Data_Bank/epoch=11-step=20911.ckpt')\n",
     "\n",
     "#add parameter below to trainer.fit to continue from a checkpoint\n",
-    "#ckpt_path='/Models_Parameters_Log/Test_Run/version_2/checkpoints/epoch=21-step=30954.ckpt'\n",
-    "\n"
+    "#ckpt_path='/Models_Parameters_Log/epoch=11-step=20911.ckpt'\n",
+    "# ckpt_path = '/Data/Data_Bank epoch=11-step=20916.ckpt'\n",
+    "# \n"
    ]
   },
   {
@@ -671,10 +560,10 @@
    "outputs": [],
    "source": [
     "# save model\n",
-    "torch.save(model.state_dict(), 'Models_Parameters_Log/258_Test_run_3.pth')\n",
+    "torch.save(model.state_dict(), 'Models_Parameters_Log/Printed1.pth')\n",
     "\n",
     "# save vocabulary\n",
-    "save_dic(dataset.vocabulary)"
+    "#save_dic(dataset.vocabulary)"
    ]
   },
   {
