remote notebook push'

--- a/Jupyter_Notebooks/GPC_MODEL1_character_tokenizer.ipynb
+++ b/Jupyter_Notebooks/GPC_MODEL1_character_tokenizer.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "b1796eea",
    "metadata": {
     "scrolled": false
@@ -221,7 +221,7 @@
     {
      "data": {
       "text/html": [
-       "Finishing last run (ID:kbcjxsgd) before initializing another..."
+       "Finishing last run (ID:kmmb6lcn) before initializing another..."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -245,7 +245,12 @@
     {
      "data": {
       "text/html": [
-       "Synced <strong style=\"color:#cdcd00\">ancient-snowball-149</strong>: <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/kbcjxsgd\" target=\"_blank\">https://wandb.ai/gmarus/image-to-tex-OCR/runs/kbcjxsgd</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train/loss</td><td>▃▂▅▄▃▇▆▄▅▇▆▄▅▅▇▂▇▅▆▆▇▇█▅▃▅▅▂▃▄▄▂▄▁▆▃▅▂▂▄</td></tr><tr><td>validation/cer</td><td>▃▅▅▄▅▆▄▇▂▇▅█▂▅▁▅</td></tr><tr><td>validation/loss</td><td>▃▃▇▄▇█▇▄▁▆▅▇▂▃▁▆</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train/loss</td><td>0.23457</td></tr><tr><td>validation/cer</td><td>0.11019</td></tr><tr><td>validation/loss</td><td>0.21346</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -257,7 +262,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20230316_023853-kbcjxsgd/logs</code>"
+       "Synced <strong style=\"color:#cdcd00\">lilac-glade-150</strong>: <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/kmmb6lcn\" target=\"_blank\">https://wandb.ai/gmarus/image-to-tex-OCR/runs/kmmb6lcn</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -269,7 +274,19 @@
     {
      "data": {
       "text/html": [
-       "Successfully finished last run (ID:kbcjxsgd). Initializing new run:<br/>"
+       "Find logs at: <code>./wandb/run-20230316_024217-kmmb6lcn/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Successfully finished last run (ID:kmmb6lcn). Initializing new run:<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -281,12 +298,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83884c645ce6423fb43f5532dd8fb461",
+       "model_id": "7aa4e0f55bc24e0fa155c505d4e8df1d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.01666919943333293, max=1.0)…"
+       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.016670821833334532, max=1.0…"
       ]
      },
      "metadata": {},
@@ -320,7 +337,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/resisistancerow_909/image-to-tex-OCR/wandb/run-20230316_024217-kmmb6lcn</code>"
+       "Run data is saved locally in <code>/home/resisistancerow_909/image-to-tex-OCR/wandb/run-20230316_035651-308f39co</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -332,7 +349,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/kmmb6lcn\" target=\"_blank\">lilac-glade-150</a></strong> to <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href=\"https://wandb.ai/gmarus/image-to-tex-OCR/runs/308f39co\" target=\"_blank\">denim-armadillo-151</a></strong> to <a href=\"https://wandb.ai/gmarus/image-to-tex-OCR\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -349,7 +366,7 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "Restoring states from the checkpoint path at Data/Data_Bank/epoch=11-step=20911.ckpt\n"
+      "Restoring states from the checkpoint path at Models_Parameters_Log/Test_Run/version_1/checkpoints/epoch=18-step=33117.ckpt\n"
      ]
     },
     {
@@ -363,7 +380,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/resisistancerow_909/anaconda3/lib/python3.9/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:346: UserWarning: The dirpath has changed from 'Models_Parameters_Log/Test_Run/version_0/checkpoints' to 'Models_Parameters_Log/Test_Run/version_1/checkpoints', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
+      "/home/resisistancerow_909/anaconda3/lib/python3.9/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:346: UserWarning: The dirpath has changed from 'Models_Parameters_Log/Test_Run/version_1/checkpoints' to 'Models_Parameters_Log/Test_Run/version_2/checkpoints', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
       "  warnings.warn(\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
@@ -378,7 +395,7 @@
       "0         Non-trainable params\n",
       "3.8 M     Total params\n",
       "15.038    Total estimated model params size (MB)\n",
-      "Restored all states from the checkpoint file at Data/Data_Bank/epoch=11-step=20911.ckpt\n"
+      "Restored all states from the checkpoint file at Models_Parameters_Log/Test_Run/version_1/checkpoints/epoch=18-step=33117.ckpt\n"
      ]
     },
     {
@@ -398,12 +415,40 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfb978380f6f489d83d884741b8e504d",
+       "model_id": "c03196de417c4efd89e7deea11ce97b0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Training: 1743it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -522,7 +567,7 @@
     "\n",
     "#use the lit_model to run with Trainer\n",
     "trainer = Trainer(accelerator='gpu', devices=1,  max_epochs=60, logger=logger, auto_lr_find=True) #accumulate_grad_batches=2, overfit_batches=1, default_root_dir=\"lightning_logs/ResNet/checkpoints\"  \n",
-    "trainer.fit(model=lit_model, datamodule=dataset, ckpt_path='Data/Data_Bank/epoch=11-step=20911.ckpt')\n",
+    "trainer.fit(model=lit_model, datamodule=dataset, ckpt_path='Models_Parameters_Log/Test_Run/version_1/checkpoints/epoch=18-step=33117.ckpt')\n",
     "\n",
     "#add parameter below to trainer.fit to continue from a checkpoint\n",
     "#ckpt_path='/Models_Parameters_Log/epoch=11-step=20911.ckpt'\n",
